fix bug on Safari with react-tilt not working properly

--- a/src/styles/_card.scss
+++ b/src/styles/_card.scss
@@ -7,6 +7,7 @@
 	//frozen glass effect
 	background-color: rgba(255, 255, 255, 0.15);
 	backdrop-filter: blur(3px);
+	overflow: hidden; //fixes bug on Safari
 
 	&__image {
 		display: block;
